J21 Updates for get(0) to getFirst() J21 Updates for MHQ through gui.dialog